--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <script defer src="./index.js">
 
 </script>
-  <title>Card Spotlight Effect</title>
+
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
+  <title>Filter</title>
 </head>
+
 <body>
   <body>
     <h1>Image Filter Website</h1>
